--- a/package.json
+++ b/package.json
@@ -28,15 +28,17 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.3.2",
     "css-loader": "^5.0.1",
-    "postcss-loader": "^4.1.0",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-vue": "^7.1.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.1",
     "postcss": "^8.1.10",
+    "postcss-loader": "^4.1.0",
     "style-loader": "^2.0.0",
     "vue-loader": "^15.9.5",
     "vue-template-compiler": "^2.6.12",
