--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss": "^8.1.10",
     "postcss-loader": "^4.1.0",
     "style-loader": "^2.0.0",
+    "vue-eslint-parser": "^7.1.1",
     "vue-loader": "^15.9.5",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^5.6.0",
