--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "form-data": "^3.0.0",
+    "multer": "^1.4.2",
     "tailwindcss": "^2.0.1",
     "vue": "^2.6.12"
   },
